--- a/.github/workflows/khr.yml
+++ b/.github/workflows/khr.yml
@@ -30,5 +30,5 @@ jobs:
         python -c "import os; os.system('python C:\\Users\\tejas\\OneDrive\\Desktop\\khr_prod.py')"  # Replace with the actual path
 
       env:
-        SOURCE_DIR: C:\Users\tejas\OneDrive\Desktop\My Documents\bin  # Directly specifying the source directory
+        SOURCE_DIR: C:\\Users\\tejas\\OneDrive\\Desktop\\My Documents\\bin  # Directly specifying the source directory
         PATCH_NUMBER: ${{ github.event.inputs.patch_number }}
